# django_store

./: .gitignore  data_catalog.json  pyproject.toml
#catalog/: admin.py  models.py  urls.py  views.py
#catalog/management/commands/: fill_category.py
#catalog/migrations/: 0001_initial.py  0003_remove_category_created_at.py  0004_alter_product_product_image.py  0006_alter_product_product_image.py  0007_alter_product_product_image.py
#catalog/templates/catalog/: contacts.html  home.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/migrations/: 0002_category_created_at.py  0005_alter_product_product_image.py  0008_contacts.py  0009_blognotes.py  0010_alter_blognotes_date.py  0011_alter_blognotes_views.py  0012_alter_blognotes_views.py  0013_alter_blognotes_slug.py  0014_alter_blognotes_slug.py  0015_alter_blognotes_slug.py  0016_alter_blognotes_slug.py  0017_alter_blognotes_slug.py  0018_versionproduct.py  0019_alter_versionproduct_product_pk.py  0020_product_version.py  0021_alter_versionproduct_is_active.py  0022_product_owner.py
catalog/templates/: base.html  contacts.html  home.html  product.html
catalog/templates/catalog/: base.html  blognotes_detail.html  blognotes_form.html  blognotes_list.html  contacts_form.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_uuid.py  0003_alter_user_is_active.py
(+7 files in other folders)
