[tool.poetry]
name = "django-store"
version = "0.1.0"
description = ""
authors = ["ilmtvv <napalkah@gmail.com>"]
readme = "README.md"
packages = [{include = "django_store"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
psycopg = "^3.1.13"
psycopg2 = "^2.9.9"
pillow = "^10.1.0"
ipython = "^8.17.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
