[tool.poetry]
name = "django-store"
version = "0.1.0"
description = ""
authors = ["ilmtvv <napalkah@gmail.com>"]
readme = "README.md"
packages = [{include = "django_store"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
psycopg = "^3.1.13"
psycopg2 = "^2.9.9"
pillow = "^10.1.0"
ipython = "^8.17.2"
pytils = "^0.4.1"
django-crispy-forms = "^2.1"
setuptools = "^69.0.2"
crispy-bootstrap5 = "^2023.10"
uuid = "^1.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
